--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -6,6 +6,8 @@
     "/css/jquery-jvectormap.css": "/css/jquery-jvectormap.css",
     "/css/AdminLTE.min.css": "/css/AdminLTE.min.css",
     "/css/_all-skins.min.css": "/css/_all-skins.min.css",
+    "/css/blue.css": "/css/blue.css",
+    "/css/blue.png": "/css/blue.png",
     "/js/jquery.min.js": "/js/jquery.min.js",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js",
     "/js/fastclick.js": "/js/fastclick.js",
@@ -16,5 +18,6 @@
     "/js/jquery.slimscroll.min.js": "/js/jquery.slimscroll.min.js",
     "/js/Chart.min.js": "/js/Chart.min.js",
     "/js/dashboard2.js": "/js/dashboard2.js",
-    "/js/demo.js": "/js/demo.js"
+    "/js/demo.js": "/js/demo.js",
+    "/js/icheck.min.js": "/js/icheck.min.js"
 }
