--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": ">=7.0.0",
         "davejamesmiller/laravel-breadcrumbs": "^4.2",
         "fideloper/proxy": "~3.3",
+        "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.5",
         "lavary/laravel-menu": "^1.7",
         "predis/predis": "^1.1",
         "spatie/laravel-permission": "^2.7"
