--- a/package.json
+++ b/package.json
@@ -19,6 +19,5 @@
         "admin-lte": "^2.4.0",
         "jquery-slimscroll": "^1.3.8"
     },
-    "dependencies": {
-    }
+    "dependencies": {}
 }
